--- a/recipe/roles/nginx/tasks/main.yml
+++ b/recipe/roles/nginx/tasks/main.yml
@@ -4,3 +4,8 @@
 
 - name: nginx install
   yum: name=nginx state=present
+
+
+
+- name: nginx enabled
+  service: name=nginx state=started enabled=yes
